tests/invalid/trait/impl_method_uncalled_body_type_error.facet
trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted isize {
  fn run(self: Self) -> () {
    1
  }
}

fn main() -> unrestricted () {
  ()
}
